--- a/html-bio-with-css.html
+++ b/html-bio-with-css.html
@@ -29,7 +29,7 @@
     <section id="contact-info">
       <h2>Contact Info</h2>
       <ul>
-        <li><strong>Email:</strong> <a href="mailto:">####@gmail.com</a></li>
+        <li><strong>Email:</strong> <a href="mailto:">someplace@gmail.com</a></li>
         <li><strong>Github:</strong> <a href="https://github.com/Daveym1">Daveym1</a></li>
         <li><strong>Portfolio:</strong> <a href="#">coming soon</a></li>
       </ul>
